<resources>
    <string name="app_name">ProyectoFinal-IDNP</string>
    <string name="login_editText_usuario">usuario: </string>
    <string name="login_editText_password">contraseña: </string>
    <string name="login_btn_ingresar">INGRESAR</string>

    <!-- Titulos. -->
    <string name="title_comienzo">Comienzo</string>
    <string name="title_entrenamiento">Entrenamiento</string>


    <!-- Comienzo -->
    <string name="comienzo_view_completados">Entrenamientos Completados</string>
    <string name="comienzo_view_tiempo_total">Tiempo total</string>
    <string name="comienzo_view_kilometros">kilometros recorridos</string>
    <string name="comienzo_view_historial">Historial</string>
    <string name="comienzo_button_iniciar_entrenamiento">Iniciar Entrenamiento</string>
    <string name="comienzo_ranking_actual">Ranking Actual</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trayectoria">Map</string>

    <!-- Historial -->


    <!-- Entrenamiento -->
    <string name="comenzar_button">Comenzar</string>
    <string name="deseo_entrenamiento">Deseo escuchar musica durante mi entrenamiento </string>
    <string name="lista_emtrenamiento">Toda mi lista de reproduccion </string>
    <string name="si_button">Si</string>
    <string name="no_button">No</string>
    <string name="escoger_button">Escoger musica Inicio</string>
    <string name="config_entrenamiento">Configuracion Avanzada </string>
    <string name="modo_entrenamiento">Escoger modo de entrenamiento </string>
    <string name="permitir_entrenamiento">Permitir pausar </string>
    <string name="bloquear_entrenamiento">Bloquear notificaciones </string>



</resources>