<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/nombre_App"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_entrenamiento"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button7"
        android:layout_width="221dp"
        android:layout_height="70dp"
        android:background="@drawable/style_button_back"
        android:text="@string/comenzar_button"
        android:textColor="@drawable/style_button_txt_back"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="513dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_configuracion_avanzada"
        android:text="@string/config_entrenamiento"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="431dp" />

    <TextView
        android:id="@+id/opcion"
        android:layout_width="320dp"
        android:layout_height="280dp"
        android:background="@drawable/style_borde_texto"
        android:text="@string/deseo_entrenamiento"
        android:textColor="@color/black"
        android:textSize="21sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="120dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:background="@drawable/style_button_back"
        android:text="@string/si_button"
        android:textColor="@drawable/style_button_txt_back"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="195dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:background="@drawable/style_button_back"
        android:text="@string/no_button"
        android:textColor="@drawable/style_button_txt_back"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="195dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lista_emtrenamiento"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="258dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="170dp"
        android:layout_height="53dp"
        android:background="@drawable/style_button_back"
        android:text="@string/escoger_button"
        android:textColor="@drawable/style_button_txt_back"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteY="327dp" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="40dp"
        android:layout_height="51dp"
        android:buttonTint="#070707"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="258dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="3dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>