<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nombre_App"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_entrenamiento"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_configuracion_avanzada"
        android:text="@string/config_entrenamiento"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="114dp" />

    <TextView
        android:id="@+id/modo_entrenamiento"
        android:layout_width="330dp"
        android:layout_height="150dp"
        android:background="@drawable/style_borde_texto"
        android:text="@string/modo_entrenamiento"
        android:textColor="@color/black"
        android:textSize="21sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="170dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/ic_correr"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:drawableTop="@drawable/ic_manejar_bicicleta"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="221dp" />

    <TextView
        android:id="@+id/permitir_entrenamiento"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/style_borde_texto"
        android:text="@string/permitir_entrenamiento"
        android:textColor="@color/black"
        android:textSize="21sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="338dp" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="40dp"
        android:layout_height="51dp"
        android:buttonTint="#070707"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="337dp" />

    <TextView
        android:id="@+id/bloquear_entrenamiento"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/style_borde_texto"
        android:text="@string/bloquear_entrenamiento"
        android:textColor="@color/black"
        android:textSize="21sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="405dp" />

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="40dp"
        android:layout_height="51dp"
        android:buttonTint="#070707"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="405dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="221dp"
        android:layout_height="70dp"
        android:background="@drawable/style_button_back"
        android:text="@string/comenzar_button"
        android:textColor="@drawable/style_button_txt_back"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="504dp" />


</androidx.constraintlayout.widget.ConstraintLayout>