<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    tools:context=".View.ComienzoView.Fragments.ComienzoDatosFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewEntrenamientosCompletados"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"

        android:text="@string/comienzo_view_completados"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_comienzo_kilometros_recorridos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_comienzo_kilometros_recorridos"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:text="@string/comienzo_view_kilometros"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_comienzo_tiempototal"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textview_comienzo_tiempototal"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:text="@string/comienzo_view_tiempo_total"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comienzo_TextView_completados"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:text="12"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewEntrenamientosCompletados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_comienzo_tiempototal" />

    <TextView
        android:id="@+id/comienzo_textView_kilometros"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:text="16"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_comienzo_kilometros_recorridos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comienzo_TextView_completados"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comienzo_textView_tiempo"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:text="3h:45m"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textview_comienzo_tiempototal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>